--- a/style.css
+++ b/style.css
@@ -23,7 +23,25 @@ h1{
   max-width: 100%;
   opacity: 0.4;
 }
+h2{
+  color: #ffffff;
+  font-size: 3rem;
+  text-align: center;
+  max-width: 100%;
+  opacity: 0.4;
+}
+h3{
+  color: #ffffff;
+  font-size: 1rem;
+  text-align: center;
+  max-width: 100%;
+  opacity: 0.4;
+}
 
+td{
+ color: #ffffff;
+ text-align: center;
+}
 
 form{
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
